.kube/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: file-parser-service
  namespace: file-parser
  labels:
    app: file-parser
spec:
  type: ClusterIP
  selector:
    app: file-parser
  ports:
  - port: 80
    targetPort: 3000
    protocol: TCP
