.kube/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: file-parser-ingress
  namespace: file-parser
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod

spec:
  tls:
  - hosts:
    - parser.k8s.louisperdereau.fr
    secretName: file-parser-app-tls
  rules:
  - host: parser.k8s.louisperdereau.fr
    http:
      paths:
      - path: /
        backend:
          serviceName: file-parser-service
          servicePort: 80
